# beggar-my-neighbour

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bench/: lib.rs
src/: circlebuffer.rs  clearvec.rs  cursorslice.rs  lib.rs  main.rs  slicefifo.rs
tests/: game.rs  lib.rs
