[package]
name = "beggar-my-neighbour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
rand = "0.8.5"

# uncomment this when doing performance testing
# [profile.release]
# debug = true