[package]
name = "beggar-my-neighbour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
fastrand = "2.0.0"
indoc = "2.0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# uncomment this when doing performance testing
# debug = true
